hphp/hack/test/typecheck/like_types/dynamic_coercion/like_decl_types/tarray.php.exp
File "tarray.php", line 9, characters 10-11:
Invalid return type (Typing[4110])
File "tarray.php", line 8, characters 33-42:
Expected varray<int>
File "tarray.php", line 8, characters 16-26:
But got dynamic
File "tarray.php", line 13, characters 10-11:
Invalid return type (Typing[4110])
File "tarray.php", line 12, characters 41-58:
Expected darray<int, string>
File "tarray.php", line 12, characters 16-34:
But got dynamic
